2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/app.h:
	* ui/Makefile.am:
	* ui/gnome-phone-manager.schemas.in: Add a schemas file,
	remove the /prefs subdir to gnome-phone-manager GConf entries,
	it's all prefs anyway (Closes: #455841)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (tray_icon_popup_menu_cb):
	* src/ui.c: (apply_prefs), (prefs_dialog_response), (ui_init),
	(ui_hide), (show_prefs_window):
	* ui/phonemgr.glade: Patch from Christian Persch <chpe@gnome.org>
	to make the preferences dialogue a GtkDialog instead of a window,
	and fix some spacing issues (Closes: #455869)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require a newer gnome-bluetooth to get a fixed
	pkgconfig file for libgnomeui includes
	add GStreamer dependency to play our sound alert

	* libgsm/Makefile.am:
	* libgsm/gnokii-identify.c: Removed, deprecated by the --identify
	switch in gnome-phone-manager

	* src/menu.c: (about_activated), (construct_menu): Port to GtkAbout,
	use Gtk stock icons instead of GNOME ones

	* src/ui.c: (get_resource), (get_ui), (play_sound),
	(idle_play_alert): Use GStreamer to play the alerts, remove GNOME
	dependency for finding resource files

	* src/main.c: (main): Remove the GNOME dependencies, use GOption
	to add the --identify switch

	* src/icon.c: (load_icon):
	* src/app.h:
	* src/connection.c: Remove GNOME dep

	(Closes: #455837)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/gnome-phone-manager.desktop.in: Fix wonky desktop file,
	thanks to Richard Hughes

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* ui/Makefile.am: install cellphone in $(datadir)/pixmaps, not
	$(datadir)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/connection.c: (initialise_connection): Make it compile again
	with F7's glib

2007-07-11  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* po/LINGUAS: Use po/LINGUAS as per GnomeGoal.

2007-07-11  Bastien Nocera  <hadess@hadess.net>
